@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.133.2.6 2008/01/14 07:27:58 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: plot2d.c,v 1.133.2.7 2008/03/12 03:21:42 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - plot2d.c */
@@ -280,6 +280,14 @@ get_data(struct curve_points *current_plot)
     struct coordinate GPHUGE *cp;
 #endif
 
+    TBOOLEAN variable_color;
+    double   variable_color_value;
+    if ((current_plot->lp_properties.pm3d_color.type == TC_RGB)
+    &&  (current_plot->lp_properties.pm3d_color.value < 0))
+	variable_color = TRUE;
+    else
+	variable_color = FALSE;
+
     /* eval_plots has already opened file */
 
     /* HBB 2000504: For most plot styles, the 'z' coordinate is
@@ -449,7 +457,14 @@ get_data(struct curve_points *current_plot)
 	     * needlessly small steps. */
             cp_extend(current_plot, i + i + 1000);
         }
-        /* Limitation: No xerrorbars with boxes */
+
+	/* Allow for optional columns.  Currently only used for BOXES, but */
+	/* should be extended to a more general mechanism.                 */
+	if (j > 1 && variable_color && current_plot->plot_style == BOXES) {
+		variable_color_value = v[--j];
+	} else
+		variable_color_value = 0;
+
         switch (j) {
         default:
             {
@@ -568,11 +583,11 @@ get_data(struct curve_points *current_plot)
 			double base = axis_array[current_plot->x_axis].base;
 			store2d_point(current_plot, i++, v[0], v[1],
 				      v[0] * pow(base, -boxwidth/2.), v[0] * pow(base, boxwidth/2.),
-				      v[1], v[1], 0.0);
+				      v[1], variable_color_value, 0.0);
 		    } else
 			store2d_point(current_plot, i++, v[0], v[1],
 				      v[0] - boxwidth / 2, v[0] + boxwidth / 2,
-				      v[1], v[1], 0.0);
+				      v[1], variable_color_value, 0.0);
 		} else {
 		    if (current_plot->plot_style == CANDLESTICKS
 			|| current_plot->plot_style == FINANCEBARS) {
@@ -620,11 +635,10 @@ get_data(struct curve_points *current_plot)
                     break;
 
                 case BOXES:
-                    /* calculate xmin and xmax here, so that logs are
-                     * taken if if necessary */
+		    /* calculate xmin and xmax here, so that logs are taken if if necessary */
                     store2d_point(current_plot, i++, v[0], v[1],
                                   v[0] - v[2] / 2, v[0] + v[2] / 2,
-                                  v[1], v[1], 0.0);
+				  v[1], variable_color_value, 0.0);
                     break;
 
 #ifdef EAM_DATASTRINGS
@@ -693,6 +707,11 @@ get_data(struct curve_points *current_plot)
 
 
             case BOXES:
+		/* x, y, xmin, xmax */
+		store2d_point(current_plot, i++, v[0], v[1], v[2], v[3],
+			      v[1], variable_color_value, 0.0);
+		break;
+
             case XERRORLINES:
             case XERRORBARS:
                 /* x, y, xmin, xmax */
@@ -829,8 +848,7 @@ store2d_point(
     double x, double y,
     double xlow, double xhigh,
     double ylow, double yhigh,
-    double width)               /* BOXES widths: -1 -> autocalc, 0 ->
-                                 * use xlow/xhigh */
+    double width)               /* BOXES widths: -1 -> autocalc, 0 ->  use xlow/xhigh */
 {
     struct coordinate GPHUGE *cp = &(current_plot->points[i]);
     int dummy_type = INRANGE;   /* sometimes we dont care about outranging */
@@ -921,6 +939,14 @@ store2d_point(
 	cp->xhigh = xhigh;
 	cp->ylow = ylow;
 	cp->yhigh = yhigh;
+	break;
+    case BOXES:			/* auto-scale to xlow xhigh ylow yhigh */
+	cp->ylow = y;
+	cp->yhigh = yhigh;	/* really variable_color_data */
+	STORE_WITH_LOG_AND_UPDATE_RANGE(cp->xlow, xlow, dummy_type, 
+					current_plot->x_axis, NOOP, cp->xlow = -VERYLARGE);
+	STORE_WITH_LOG_AND_UPDATE_RANGE(cp->xhigh, xhigh, dummy_type,
+					current_plot->x_axis, NOOP, cp->xhigh = -VERYLARGE);
 	break;
     default:			/* auto-scale to xlow xhigh ylow yhigh */
 	STORE_WITH_LOG_AND_UPDATE_RANGE(cp->xlow, xlow, dummy_type, 
